# biocommons.seqrepo

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .hgtags  .mailmap  .pre-commit-config.yaml  .travis.yml  CITATION.cff  Makefile  README.md  README.rst  TODO  design.rst  index.html  params.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: labels.yml
.github/workflows/: ci.yml  cqa.yml  labels.yml  publish.yaml  python-package.yml  release-please.yml  stale.yml
archive/: test_dataproxy.py
biocommons/seqrepo/: __init__.py  _versionwarning.py  cli.py  seqrepo.py
biocommons/seqrepo/fastadir/: bases.py  fabgz.py  fastadir.py
biocommons/seqrepo/fastaiter/: fastaiter.py
biocommons/seqrepo/py2compat/: __init__.py  _commonpath.py  _makedirs.py  _which.py  commonpath.py
biocommons/seqrepo/seqaliasdb/: seqaliasdb.py
biocommons/seqrepo/seqaliasdb/_data/migrations/: 0001-initial.py
doc/: api.rst  cli.rst  design.rst  docker.rst  index.rst  installation.rst  long_description.rst  mirror.rst  short_description.txt
doc/changelog/0.4/: 0.4.0.clog  0.4.1.clog  0.4.2.rst  0.4.3.clog  0.4.3.rst  0.4.5.clog  0.4.5.rst
docs/: API Examples.ipynb  Timings.ipynb  Truncated Digest Collision Analysis.ipynb  api.rst  cli.rst  dataproxy.rst  design.rst  docker.rst  index.html  loading-notes.rst  long_description.rst  mirror.rst  sequence_loading.rst  store.rst  utils.py
docs/changelog/0.4/: 0.4.0.rst  0.4.1.rst  0.4.2.clog  0.4.4.clog  0.4.4.rst
docs/changelog/0.5/: 0.5.0.clog  0.5.0.rst  0.5.1.clog  0.5.1.rst  0.5.2.clog  0.5.2.rst  0.5.3.clog  0.5.3.rst  0.5.4.clog  0.5.4.rst  0.5.5.clog  0.5.5.rst  0.5.6.clog  0.5.6.rst  Makefile
docs/changelog/0.6/: 0.6.0.clog  0.6.0.rst  0.6.1.clog  0.6.1.rst  0.6.2.clog  0.6.2.rst  0.6.3.clog  0.6.3.rst  0.6.4.clog  0.6.4.rst  0.6.5.clog  0.6.5.rst  0.6.6.clog  0.6.6.rst
etc/: develop.reqs  install.reqs
fixes/: 80-require-ensembl-versions  81-drop-genbank-and-gi-namespaces  83-fix-whitespace-aliases  fixer  fixes.yaml
loading/: Makefile
misc/: rsync-log-summary  threading-test  threading-verification.py  update_seqrepo.sh
misc/docker/: Makefile  README  build  seqrepo.df
misc/sql/: 16-recase-namespace.sql
misc/threading-tests/: README.md  threading-test  threading-verification.py
sbin/: get-sequence-urls  makefile-extract-documentation  seqrepo-push  seqrepo-update  stream-download
seqrepo/: __init__.py  cli.py  exceptions.py  seqrepo.py
seqrepo/fastadir/: __init__.py  bases.py  fabgz.py  fastadir.py
seqrepo/fastadir/_data/: 0001-initial.py
seqrepo/fastadir/_data/migrations/: 0000-base.py
seqrepo/py2compat/: __init__.py  lru_cache.py  makedirs.py
seqrepo/seqaliasdb/: __init__.py  seqaliasdb.py
seqrepo/seqaliasdb/_data/migrations/: 0000-base.py
src/biocommons/: __init__.py
src/biocommons/seqrepo/: __init__.py  _versionwarning.py  cli.py  config.py  dataproxy.py  seqrepo.py  utils.py
src/biocommons/seqrepo/_internal/: logging_support.py  translate.py
src/biocommons/seqrepo/fastadir/: __init__.py  bases.py  fabgz.py  fastadir.py
src/biocommons/seqrepo/fastadir/_data/migrations/: 0000-base.py  0001-initial.py
src/biocommons/seqrepo/fastaiter/: __init__.py  fastaiter.py
src/biocommons/seqrepo/py2compat/: _commonpath.py
src/biocommons/seqrepo/refget/: __main__.py  globals.py  refget-openapi.yaml  utils.py
src/biocommons/seqrepo/refget/routes/: metadata.py  ping.py  sequence.py  serviceInfo.py
src/biocommons/seqrepo/seqaliasdb/: __init__.py  seqaliasdb.py
src/biocommons/seqrepo/seqaliasdb/_data/migrations/: 0000-base.py  0001-initial.py
tests/: conftest.py  support.py  test_cli.py  test_config.py  test_dataproxy.py  test_fabgz.py  test_fastadir.py  test_fastaiter.py  test_py2compat.py  test_seqaliasdb.py  test_seqrepo.py  test_utils.py
tests/cassettes/: test_dataproxy_rest.yaml
tests/data/: test.fa
