[project]
name = "biocommons.seqrepo"
authors = [
    { name = "biocommons contributors", email = "biocommons-dev@googlegroups.com" },
]
description = "Non-redundant, compressed, journalled, file-based storage for biological sequences"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "bioutils >= 0.6",
    "coloredlogs >= 15.0",
    "pysam >= 0.23",
    "requests >= 2.32",
    "tqdm >= 4.67",
    "typing_extensions",
    "yoyo-migrations >= 9.0",
]

[project.optional-dependencies]
shell = ["ipython >= 8.33"]
dev = [
    "build ~= 0.8",
    "ipython ~= 8.4",
    "pre-commit >= 4.2.0",
    "pyright~=1.1",
    "mypy-extensions ~= 1.0",
    "ruff == 0.12.8",
    "requests_html ~= 0.10",
]
tests = [
    "tox >= 3.28",
    "pytest-cov >= 6.1",
    "pytest >= 7.1",
    "vcrpy >= 7.0",
]
docs = ["mkdocs"]

[project.scripts]
seqrepo = "biocommons.seqrepo.cli:main"

[project.urls]
"Homepage" = "https://github.com/biocommons/biocommons.seqrepo"
"Bug Tracker" = "https://github.com/biocommons/biocommons.seqrepo/issues"

[build-system]
requires = ["setuptools >= 75", "setuptools_scm[toml] >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["__pycache__", "*.pyc"]
namespaces = true

[tool.setuptools.package-data]
"biocommons.seqrepo.fastadir" = ["_data/migrations/*"]
"biocommons.seqrepo.seqaliasdb" = ["_data/migrations/*"]

[tool.setuptools_scm]

# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-s -v -x --strict-markers -m 'not extra' --doctest-modules --cov=src"
doctest_optionflags = [
    "ALLOW_BYTES",
    "ALLOW_UNICODE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
    "NORMALIZE_WHITESPACE",
]
markers = [
    "network: tests that require network connectivity",
    "slow: slow tests that should be run infrequently",
    "vcr: tests with cached data",
]

[tool.coverage.run]
branch = true
source = ["biocommons.seqrepo"]
omit = ["*_test.py", "*/test/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
]

[tool.pyright]
include = ["src", "tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
exclude = [
    "archive/",
    "docs/",
    "misc/",
    "fixes",
    "sbin/",
    "setup.py",
    "src/biocommons/seqrepo/seqaliasdb/_data/**/*",
    "src/biocommons/seqrepo/fastadir/_data/**/*",
    "src/biocommons/seqrepo/_internal/logging_support.py",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # not used
    "AIR",
    "ERA",
    "FAST",
    "YTT",
    "FBT",
    "CPY",
    "DJ",
    "EM",
    "EXE",
    "FIX",
    "FA",
    "INT",
    "PYI",
    "TID",
    "TD",
    "TC",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    # excessive docstring requirements
    "D105",
    "D205",
    "D203",
    "D213",  # conflicts with D212
    "D400",
    "D401",
    "D415",
    # excessive exception message requirements
    "TRY003",
    # excessive type ignore requirements
    "PGH003",
    # misc unnecessary readability requirements
    "RET504",
    # lru_cache on class methods -- this should probably be fixed eventually
    "B019",
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# D100 - undocumented-public-module
# D102 - undocumented-public-class
# D103 - undocumented-public-function
# D105 - undocumented-magic-method
# S101 - assert
# B011 - assert-false
# B019 - cached-instance-method
# INP001 - implicit-namespace-package
# SLF001 - private-member-access
# N802 - invalid-function-name
# PTH - flake8-use-pathlib -- this should be implemented eventually but requires nontrivial API-breaking changes
# T201 - print
# PLR2004 - magic-value-comparison
"src/biocommons/**/*" = [
    "D105",
]
"src/biocommons/seqrepo/seqrepo.py" = [
    "PTH",
]
"src/biocommons/seqrepo/fastadir/fastadir.py" = [
    "PTH",
]
"src/biocommons/seqrepo/fastadir/fabgz.py" = [
    "PTH",
]
"src/biocommons/seqrepo/cli.py" = [
    "D103",
    "PTH",
    "T201",
]
"tests/*" = [
    "ANN001",
    "ANN2",
    "D100",
    "D102",
    "D103",
    "S101",
    "B011",
    "INP001",
    "SLF001",
    "PLR2004",
]
"tests/test_config.py" = [
    "N802",
]
"tests/test_cli.py" = [
    "PTH",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true
