# See here:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# https://github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
# version is extracted from SCM tag by setuptools_scm
author = Reece Hart
author-email = biocommons-dev@googlegroups.com
description = 
home-page = https://github.com/biocommons/biocommons.seqrepo
name = biocommons.seqrepo

description-content-type = text/x-rst; charset=UTF-8
description-file = README.rst
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    biocommons
    bioinformatics
    genomics
    hgvs
    variation


[options]
packages = find:
python_requires = >= 3.5
zip_safe = true
package_dir =
    = src
install_requires =
    bioutils>0.4
    coloredlogs
    pysam
    requests
    requests_html
    six
    tqdm
    yoyo-migrations

setup_requires =
    pytest-runner
    setuptools_scm
    wheel

tests_require =
    pytest
    pytest-cov
    vcrpy


[options.entry_points]
console_scripts =
    seqrepo = biocommons.seqrepo.cli:main


[options.package_data]
biocommons.seqrepo.fastadir =
    _data/migrations/*
biocommons.seqrepo.seqaliasdb =
    _data/migrations/*


[options.extras_require]
dev =
    ipython
    tox

restservice =
    connexion[swagger-ui]


# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[tool:pytest]
addopts = --cov-config=setup.cfg --cov-report term-missing --cov=bioutils   --doctest-modules --doctest-glob='*.rst'  --strict
collect_ignore = setup.py
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
norecursedirs = _data
testpaths = src tests
markers =
  network

