[options]
include_package_data = True
packages = find_namespace:
package_dir =
    = src
zip_safe = True

install_requires =
    bioutils>0.4
    coloredlogs
    ipython
    pysam
    requests
    requests_html
    six
    tqdm
    yoyo-migrations

[options.extras_require]
dev =
    cython
    pytest-runner
    setuptools_scm
    wheel
    pytest
    pytest-cov
    vcrpy
docs = 
    mkdocs

[options.entry_points]
console_scripts =
    seqrepo = biocommons.seqrepo.cli:main

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc

[options.package_data]
biocommons.seqrepo.fastadir =
    _data/migrations/*
biocommons.seqrepo.seqaliasdb =
    _data/migrations/*


[flake8]
ignore = E129,E133,E203,E221,E241,E251,E303,E266,H106,H904,W291
max-line-length = 100
max-complexity = 15
hang-closing = true
exclude =
    .eggs
    .tox
    build
    dist
    docs/conf.py
    tests/*

